--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bill Task Management - Drive Powered</title>
+    <title>Bill's DevSprint</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
             <h1>
                 <img src="./asset/logo.png" alt="Bill's DevSprint" class="auth-logo-img">
             </h1>
-            <p>From a developer, for developers. The sprint board that puts you in control.</p>
+            <p>From a developer, for developers. </p>
             <button id="auth-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                     style="margin-right: 8px;">
