--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
             </div>
 
             <div class="header-actions">
+                <div class="search-container">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="search-icon">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                    <input type="search" id="global-search-input" placeholder="Tìm kiếm thẻ, cột..." class="global-search-input">
+                </div>
                 <button id="add-list-btn" class="header-btn">＋ Thêm Cột</button>
                 <button id="settings-btn" class="header-btn icon-btn" aria-label="Settings">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
@@ -77,6 +85,11 @@
                         </path>
                     </svg>
                 </button>
+                <button id="storage-btn" class="header-btn icon-btn" aria-label="Board Storage">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
+                    </svg> </button>
             </div>
         </header>
         <main id="board-container" class="board-container"></main>
@@ -140,6 +153,19 @@
             </div>
         </div>
     </template>
+    <template id="storage-item-template">
+        <div class="storage-item">
+            <div class="storage-item-thumbnail">
+                <!-- Thumbnail hoặc icon sẽ được chèn vào đây -->
+            </div>
+            <div class="storage-item-info">
+                <p class="storage-item-name" title="File Name"></p>
+                <span class="storage-item-context">Đính kèm trong thẻ: <a href="#" class="storage-item-card-link">Card
+                        Title</a></span>
+            </div>
+            <button class="storage-item-delete-btn danger-btn-icon" aria-label="Xóa file">×</button>
+        </div>
+    </template>
     <!-- CARD DETAIL MODAL (UPDATED) -->
     <div id="card-detail-modal" class="modal-backdrop hidden" role="dialog" aria-modal="true"
         aria-labelledby="card-detail-title">
@@ -198,7 +224,22 @@
                     này</button><button id="card-detail-save-btn" class="primary-btn">Lưu & Đóng</button></footer>
         </div>
     </div>
-
+    <div id="storage-modal" class="modal-backdrop hidden" role="dialog" aria-modal="true" aria-labelledby="storage-title">
+        <div class="modal-content modal-lg">
+            <header class="modal-header">
+                <h2 id="storage-title">Kho Lưu trữ của Board</h2>
+                <button class="modal-close-btn" aria-label="Close">×</button>
+            </header>
+            <div class="modal-body">
+                <div id="storage-grid">
+                    <!-- Các file sẽ được chèn động vào đây -->
+                </div>
+                <div id="storage-empty-placeholder" class="hidden">
+                    <p>Chưa có tệp nào được đính kèm trên board này.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- PREVIEW MODAL (LIGHTBOX) -->
     <div id="preview-modal" class="modal-backdrop hidden" role="dialog" aria-modal="true"
         aria-labelledby="preview-title">
@@ -322,6 +363,9 @@
         <div class="modal-content modal-xl">
             <header class="modal-header">
                 <h2 id="wallpaper-gallery-title">Thư viện Hình nền động</h2>
+                <div class="wallpaper-search-container">
+                    <input type="search" id="wallpaper-search-input" placeholder="Tìm theo tên..." class="wallpaper-search-input">
+                </div>
                 <button class="modal-close-btn" aria-label="Close">×</button>
             </header>
             <div class="modal-body">
