--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
 
             <div class="header-actions">
                 <div class="search-container">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="search-icon">
-                        <circle cx="11" cy="11" r="8"></circle>
-                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                    </svg>
-                    <input type="search" id="global-search-input" placeholder="Tìm kiếm thẻ, cột..." class="global-search-input">
+                    <div class="search-input-group">
+                        <input type="search" id="global-search-input" placeholder="Tìm kiếm thẻ, cột..." class="search-input">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="search-icon">
+                            <circle cx="11" cy="11" r="8"></circle>
+                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                        </svg>
+                    </div>
                 </div>
                 <button id="add-list-btn" class="header-btn">＋ Thêm Cột</button>
                 <button id="settings-btn" class="header-btn icon-btn" aria-label="Settings">
@@ -364,9 +366,15 @@
             <header class="modal-header">
                 <h2 id="wallpaper-gallery-title">Thư viện Hình nền động</h2>
                 <div class="wallpaper-search-container">
-                    <input type="search" id="wallpaper-search-input" placeholder="Tìm theo tên..." class="wallpaper-search-input">
+                    <div class="search-input-group">
+                        <input type="search" id="wallpaper-search-input" placeholder="Tìm theo tên hình nền...">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="search-icon">
+                            <circle cx="11" cy="11" r="8"></circle>
+                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                        </svg>
+                    </div>
                 </div>
-                <button class="modal-close-btn" aria-label="Close">×</button>
             </header>
             <div class="modal-body">
                 <div id="wallpaper-grid" class="wallpaper-grid-container">
