update delete column

--- a/index.html
+++ b/index.html
@@ -399,7 +399,11 @@
             <li data-action="sort-created-desc">Sắp xếp: Ngày tạo (Mới nhất)</li>
             <li data-action="sort-updated-desc">Sắp xếp: Ngày sửa (Mới nhất)</li>
             <li data-action="sort-title-asc">Sắp xếp: Tên thẻ (A-Z)</li>
+        </ul>
+        <hr class="menu-divider">
+        <ul>
             <li data-action="delete-all-cards" class="danger">Xoá tất cả thẻ...</li>
+            <li data-action="delete-list" class="danger">Xoá Cột này...</li> <!-- DÒNG MỚI -->
         </ul>
     </div>
 </body>
